<resources>
    <string name="app_name">MyCountryNotes</string>
    <string name="todo">TODO</string>
    <string name="text_with_spaces">" "%s " "</string>
    <string name="number_citezens">%d citizens</string>
    <string name="number_sqkm">%s sqkm</string>
    <string name="button_add">Add</string>
    <string name="countryname">Countryname</string>
    <string name="item_url_text">URL:https://bla bla bla</string>
    <string name="search">Search by Country name</string>
    <string name="capitalcity">CapitalCity</string>
    <string name="unknown">UNKNOWN</string>
    <string name="button_add_note">Add Note</string>
    <string name="button_add_picture">Add Picture</string>
    <string name="button_add_link">Add Link</string>
    <string name="text_note">Text note</string>
    <string name="type_your_message_here">Type Your message here</string>
    <string name="save">save</string>
    <string name="www">www</string>
    <string name="https">https</string>
    <string name="REST_Countries">www.restcountries.eu</string>
    <string name="path">/</string>
</resources>